# archestra

./: .gitignore  EXTERNAL_CONTRIBUTORS.md
.github/: CODEOWNERS  dependabot.yml  values-ci.yaml  values-staging.yaml
.github/release-please/: .release-please-manifest.json
.github/workflows/: on-commits-to-main.yml  platform-e2e-tests.yml  random-issue-pr-assignee.yml
docs/pages/: mcp-authentication.md  platform-access-control.md  platform-agent-triggers-schedule.md  platform-agents.md  platform-archestra-mcp-server.md  platform-chat.md  platform-deployment.md  platform-llm-proxy-authentication.md  platform-model-router-client-credentials-example.md  platform-model-router-user-oauth-example.md  platform-observability.md  platform-private-registry.md  platform-secrets-management.md  platform-sso-role-mapping.md  platform-sso-team-sync.md  platform-supported-llm-providers.md
platform/: .env.example  CHANGELOG.md  CLAUDE.md  Dockerfile  Tiltfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
platform/archestra-rs/: deny.toml
platform/archestra-rs/sandbox-core/: Cargo.toml
platform/archestra-rs/sandbox-core/src/: backend.rs  lib.rs  runtime.rs  session.rs  telemetry.rs  tracing_ctx.rs
platform/archestra-rs/sandbox-core/src/backends/: dagger.rs
platform/backend/: package.json
platform/dev/: Tiltfile.coderuntime  Tiltfile.database  Tiltfile.dev  run-backend-dev.sh
platform/e2e-tests/: auth.teams.setup.ts  consts.ts
platform/frontend/: next.config.ts  package.json  playwright.config.ts
platform/scripts/: dev-stack.sh
(+434 files in other folders)
